Fixed attribution link styling on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -55,6 +55,7 @@ textarea:focus, input:focus {
 
 #attribution-link > a:hover {
     color: rgba(0,0,0,.5);
+    cursor: pointer;
 }
 
 .close:focus {
